--- a/portfolio-app/src/styles/Navbar.css
+++ b/portfolio-app/src/styles/Navbar.css
@@ -1,25 +1,31 @@
 .navbar {
   width: 100%;
   height: 100px;
-  background: #21325e;
+  background: white;
   position: sticky;
   top: 0;
+  font-family:'Courier New', Courier, monospace;
+  font-weight: bold;
 }
 
 .links {
   width: 100%;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: white;
+  display: inline-block;
+  text-align: center;
+  padding-top: 30px;
+  color: black;
 }
 
 .navbar a {
-  color: white;
+  color: black;
   text-decoration: none;
   margin: 20px;
   font-size: 25px;
+}
+
+.navbar a:hover {
+  text-decoration: underline;
 }
 
 .toggleButton {
