--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -4,10 +4,15 @@
   display: flex;
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f0f0f0;
+  background-color: white;
 }
 
 body {
   padding: 0;
   margin: 0;
+}
+
+a:hover {
+  opacity: 0.5;
+  transition-duration: 500ms;
 }
