--- a/portfolio-app/src/styles/Navbar.css
+++ b/portfolio-app/src/styles/Navbar.css
@@ -24,26 +24,24 @@
   font-size: 25px;
 }
 
-.navbar a:hover {
-  text-decoration: underline;
-}
-
 .toggleButton {
   width: 100%;
   height: 100px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
+  color: black;
 }
 
 .toggleButton svg {
   font-size: 50px;
+  color: black;
 }
 .toggleButton button {
   margin-right: 20px;
   background-color: transparent;
   border: none;
-  color: white;
+  color: black;
   cursor: pointer;
 }
 
@@ -62,35 +60,8 @@
   text-align: center;
 }
 
-@media only screen and (max-width: 900px) {
-  .navbar a {
-    width: 70px;
-  }
-}
-
 @media only screen and (max-width: 600px) {
-  .toggleButton {
-    display: flex;
-  }
-  #close a {
-    display: none;
-  }
-}
-
-@media only screen and (min-width: 600px) {
-  .toggleButton {
-    display: none;
-  }
-
-  .hiddenLinks {
-    display: none;
-  }
-
-  #open {
-    height: 100px;
-  }
-
-  #open .links {
-    flex-direction: row;
+  .navbar a {
+    font-size: 20px;
   }
 }
