--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -5,6 +5,8 @@
   flex-direction: column;
   font-family: Arial, Helvetica, sans-serif;
   background-color: white;
+  padding: 0;
+  margin: 0;
 }
 
 body {
