--- a/portfolio-app/src/styles/Home.css
+++ b/portfolio-app/src/styles/Home.css
@@ -2,12 +2,12 @@
   width: 100%;
   align-items: center;
   font-family:'Courier New', Courier, monospace;
-  color: #3e497a;
+  color: black;
 }
 
 .about {
   width: 100%;
-  min-height: calc(100vh - 100px);
+  min-height: calc(100vh - 150px);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -34,6 +34,7 @@
 }
 
 .skills {
+  background: black;
   font-size: 35px;
   width: 100%;
   display: flex;
@@ -41,10 +42,10 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  color: white;
 }
 
 .skills h1 {
-  color: #3e497a;
   align-items: center;
 }
 
