--- a/portfolio-app/src/styles/Navbar.css
+++ b/portfolio-app/src/styles/Navbar.css
@@ -9,12 +9,15 @@
 }
 
 .links {
-  width: 100%;
+  width: auto;
   height: 100%;
   display: inline-block;
   text-align: center;
   padding-top: 30px;
   color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .navbar a {
@@ -24,40 +27,52 @@
   font-size: 25px;
 }
 
+#open .links {
+  left: 0;
+  transition-duration: 1000ms;
+  transition-timing-function: cubic-bezier(.18,.87,.3,.97);
+}
+
+#close .links {
+  left: -100%;
+  transition-duration: 700ms;
+  transition-timing-function: ease-in;
+}
+
 .toggleButton {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
+  position: absolute;
+  top: 33px;
+  left: 33px;
   color: black;
 }
 
-.toggleButton svg {
-  font-size: 50px;
-  color: black;
-}
 .toggleButton button {
-  margin-right: 20px;
-  background-color: transparent;
+  background-color: black;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
   border: none;
   color: black;
   cursor: pointer;
+  transition-duration: 500ms;
+  &:hover {
+    animation: pulse 2s ease-in-out infinite;
+  }
 }
 
-#open {
-  height: 100vh;
+@keyframes pulse{
+  50%{
+    box-shadow: 0 0 15px 3px black;
+    transform: scale(1.1);
+  }
+  100%{
+    box-shadow: 0 0 30px 3px rgba(0,0,0,0);
+    transform: scale(1.0);
+  }
 }
 
-#open .links {
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-top: 100px;
-}
-
-#open a {
-  width: 100%;
-  text-align: center;
+#open .toggleButton button {
+  opacity: 0;
 }
 
 @media only screen and (max-width: 600px) {
