--- a/portfolio-app/src/styles/Home.css
+++ b/portfolio-app/src/styles/Home.css
@@ -1,11 +1,16 @@
 .home {
-  width: 100vw;
+  width: 100%;
+  height: calc(100vh - 150px);
+  max-width: 100vw;
+  overflow-x: hidden;
   align-items: center;
   font-family:'Courier New', Courier, monospace;
   color: black;
+  overflow: hidden;
 }
 
 .about {
+  position: relative;
   width: 100%;
   min-height: calc(100vh - 150px);
   display: flex;
@@ -13,8 +18,8 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: white;
   color: black;
+  z-index: 1;
 }
 
 .about h2 {
@@ -52,4 +57,21 @@
     font-size: 20px;
     width: 80%;
   }
+}
+
+#blob {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
+  z-index: -2;
+}
+
+#blur {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0px;
+  z-index: -1;
+  backdrop-filter: blur(12vmax);
 }
