--- a/portfolio-app/src/styles/Navbar.css
+++ b/portfolio-app/src/styles/Navbar.css
@@ -7,12 +7,21 @@
   font-weight: bold;
 }
 
+.linksContainer {
+  position:absolute;
+  left: 43px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .links {
   width: auto;
   height: 100%;
   display: inline-block;
   text-align: center;
   padding-top: 30px;
+  margin-left: 30px;
   color: black;
   position: absolute;
   top: 0;
@@ -33,22 +42,22 @@
 }
 
 #close .links {
-  left: -100%;
+  left: -55%;
   transition-duration: 700ms;
-  transition-timing-function: ease-in;
+  transition-timing-function: cubic-bezier(.52,-0.14,.96,.53);
 }
 
 .toggleButton {
   position: absolute;
-  top: 33px;
-  left: 33px;
+  top: 29px;
+  left: 29px;
   color: black;
 }
 
 .toggleButton button {
   background-color: black;
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   border-radius: 50%;
   border: none;
   color: black;
@@ -68,10 +77,6 @@
     box-shadow: 0 0 30px 3px rgba(0,0,0,0);
     transform: scale(1.0);
   }
-}
-
-#open .toggleButton button {
-  opacity: 0;
 }
 
 @media only screen and (max-width: 600px) {
