--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -1,15 +1,14 @@
 html, body {
-  height: 100%;
+  height: auto;
   overflow: hidden;
 }
 .App {
   width: 100vw;
-  overflow: hidden;
   height: 100%;
   max-height: 100vh;
   display: flex;
   flex-direction: column;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family:'Courier New', Courier, monospace;
   background-color: white;
   padding: 0;
   margin: 0;
@@ -26,4 +25,18 @@ a {
 
 a:hover {
   opacity: 0.5;
+}
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  width: 15px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  border: 4px solid transparent;
+  background-color: rgba(0,0,0,0.2);
+  background-clip: content-box;
 }
