--- a/portfolio-app/src/styles/ProjectDisplay.css
+++ b/portfolio-app/src/styles/ProjectDisplay.css
@@ -1,15 +1,21 @@
 .project {
   width: 100%;
-  height: calc(100vh - 100px);
+  min-height: calc(100vh - 150px);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  font-family: 'Courier New', Courier, monospace;
+  color: black;
+  text-align: center;
+}
+
+.description {
+  font-size: 20px;
 }
 
 .project h1 {
   margin-top: 50px;
-  color: #3e497a;
   font-size: 35px;
 }
 .project img {
@@ -17,12 +23,7 @@
   border-radius: 10px;
 }
 
-.project p {
-  font-size: 40px;
-  color: #3e497a;
-}
-
 .project svg {
   font-size: 60px;
-  color: #3e497a;
+  color: black;
 }
