--- a/portfolio-app/src/styles/Blob.css
+++ b/portfolio-app/src/styles/Blob.css
@@ -20,4 +20,18 @@
     animation: rotate 20s infinite;
     opacity: 0.8;
     overflow: hidden;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    translate: -50% -50%;
+    z-index: -2;
+}
+
+#blur {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0px;
+  z-index: -1;
+  backdrop-filter: blur(12vmax);
 }
