--- a/portfolio-app/src/styles/Blob.css
+++ b/portfolio-app/src/styles/Blob.css
@@ -31,7 +31,8 @@
   height: 100vh;
   width: 100vw;
   position: absolute;
-  top: 0px;
+  top: 0;
+  left: 0;
   z-index: -1;
   backdrop-filter: blur(12vmax);
 }
