--- a/portfolio-app/src/styles/Navbar.css
+++ b/portfolio-app/src/styles/Navbar.css
@@ -1,10 +1,11 @@
 .navbar {
   width: 100%;
   height: 100px;
-  position: sticky;
+  position: absolute;
   top: 0;
   font-family:'Courier New', Courier, monospace;
   font-weight: bold;
+  z-index: 1000;
 }
 
 .linksContainer {
