--- a/portfolio-app/src/styles/Projects.css
+++ b/portfolio-app/src/styles/Projects.css
@@ -6,6 +6,7 @@
     align-items: center;
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
+    padding-top: 100px;
   }
   .projects .projectTitle {
     text-align: center;
