--- a/portfolio-app/src/styles/Resume.css
+++ b/portfolio-app/src/styles/Resume.css
@@ -1,15 +1,13 @@
 .resume {
-    position: relative;
-    top: -75px;
-    min-height: calc(100vh - 150px);
+    width: 100%;
+    height: calc(100vh - 50px);
+    max-width: 100vw;
+    font-family:'Courier New', Courier, monospace;
+    color: black;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: 'Courier New', Courier, monospace;
-    margin: 0;
-    padding: 0;
-    z-index: -1;
 }
 
 .download {
