--- a/portfolio-app/src/styles/Projects.css
+++ b/portfolio-app/src/styles/Projects.css
@@ -7,6 +7,12 @@
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
     padding-top: 100px;
+    background-image: radial-gradient(
+        rgba(220, 220, 220, 0.4) 8%, 
+        transparent 8%
+    );
+    background-position: 0% 0%;
+    background-size: 5vmin 5vmin;
   }
   .projects .projectTitle {
     text-align: center;
