--- a/portfolio-app/src/styles/Resume.css
+++ b/portfolio-app/src/styles/Resume.css
@@ -8,6 +8,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: radial-gradient(
+        rgba(220, 220, 220, 0.4) 8%, 
+        transparent 8%
+    );
+    background-position: 0% 0%;
+    background-size: 5vmin 5vmin;
 }
 
 .download {
