--- a/portfolio-app/src/App.css
+++ b/portfolio-app/src/App.css
@@ -10,6 +10,7 @@ html, body {
   flex-direction: column;
   font-family:'Courier New', Courier, monospace;
   background-color: white;
+  color: black;
   padding: 0;
   margin: 0;
 }
@@ -20,6 +21,7 @@ body {
 }
 
 a {
+  color: #006f32;
   transition-duration: 500ms;
 }
 
@@ -41,6 +43,6 @@ a:hover {
   background-clip: content-box;
 }
 ::selection {
-  background-color: black;
+  background-color: #006f32;
   color: white;
 }
