--- a/portfolio-app/src/styles/Home.css
+++ b/portfolio-app/src/styles/Home.css
@@ -1,18 +1,23 @@
 .home {
   width: 100%;
-  height: calc(100vh - 50px);
+  height: 100vh;
   max-width: 100vw;
   overflow-x: hidden;
+  overflow-y: auto;
   align-items: center;
   font-family:'Courier New', Courier, monospace;
-  color: black;
-  overflow: hidden;
   background-image: radial-gradient(
       rgba(220, 220, 220, 0.4) 8%, 
       transparent 8%
   );
   background-position: 0% 0%;
   background-size: 5vmin 5vmin;
+  text-align: center;
+}
+
+.home a {
+  color: #006f32;
+  text-decoration: underline;
 }
 
 .about {
@@ -24,7 +29,6 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  color: black;
   z-index: 1;
 }
 
@@ -66,6 +70,6 @@
 }
 
 .home ::selection {
-  background-color: black;
+  background-color: #006f32;
   color:white;
 }
