--- a/portfolio-app/src/styles/Projects.css
+++ b/portfolio-app/src/styles/Projects.css
@@ -6,12 +6,6 @@
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
     padding-top: 100px;
-    background-image: radial-gradient(
-        rgba(220, 220, 220, 0.4) 8%, 
-        transparent 8%
-    );
-    background-position: 0% 0%;
-    background-size: 5vmin 5vmin;
   }
 .projects .projectTitle {
   text-align: center;
@@ -37,13 +31,14 @@
 /* MENU ITEM STYLING */
 
 .projectItem {
-  border: 0.5vmin solid black;
+  border: 0.3vmin solid black;
   cursor: pointer;
   position: relative;
   width: 300px;
   height: 300px;
   margin-bottom: 25px;
   margin-top: 25px;
+  text-align: left;
 }
 .projectItem:before {
   background: linear-gradient(
